--- a/src/components/enjoyForFree/index.css
+++ b/src/components/enjoyForFree/index.css
@@ -14,3 +14,25 @@
   grid-template-columns: 1fr 1fr 1fr;
   gap: 10px;
 }
+
+
+.enjoyForfreeSection .enjoyForfreeVideosGrid .miniVideoCard{
+    box-sizing: border-box;
+    width: 367px;
+    height: 244.66px;
+    left: 0%;
+    right: 0%;
+    margin-top: 48px;
+    bottom: 0%;
+    display:flex;
+    align-items: end;
+    justify-content: center;
+  
+    background: #292929;
+    border: 1px solid rgba(238, 238, 238, 0.05);
+  
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+    padding-bottom: 10px;
+    color: white;
+  }
