--- a/src/components/enjoyForFree/index.css
+++ b/src/components/enjoyForFree/index.css
@@ -33,6 +33,11 @@
   
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
-    padding-bottom: 10px;
+    padding: 10px;
     color: white;
+  }
+
+  iframe {
+    border-radius: 18px;
+    margin: 0 auto;
   }
