--- a/src/pages/cardsFilms/index.css
+++ b/src/pages/cardsFilms/index.css
@@ -1,19 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Chivo:wght@200;300;400&family=Space+Grotesk:wght@300;400;500&display=swap');
 
-.cardsFilms-container{
+.cardsFilms-container {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     margin-bottom: 450px;
-}   
-
-.cardsFilms-container .cardsFilms-content{
-    background-color: transparent;
-    
 }
 
-.cardsFilms-container .cardsFilms-content .grid-cardsFilms{
+.cardsFilms-container .cardsFilms-content {
+    background-color: transparent;
+
+}
+
+.cardsFilms-container .cardsFilms-content .grid-cardsFilms {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-content: center;
@@ -21,37 +21,36 @@
     gap: 20px;
 }
 
-.cardsFilms-container .cardsFilms-content .grid-cardsFilms > div{
+.cardsFilms-container .cardsFilms-content .grid-cardsFilms a>div {
     display: flex;
     flex-direction: column;
     justify-content: end;
-    padding-bottom: 24px;
-    height: 244px;
+    padding: 10px;
+    border-radius: 12px;
     width: 367px;
-    border-radius: 0px;
     background-color: #292929;
 
 }
 
-.cardsFilms-container .cardsFilms-content .input-content-cardsFilms{
+.cardsFilms-container .cardsFilms-content .input-content-cardsFilms {
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center  ;
+    align-items: center;
     justify-content: start;
     margin-bottom: 20px;
 }
 
-.cardsFilms-container .cardsFilms-content .input-content-cardsFilms form{
+.cardsFilms-container .cardsFilms-content .input-content-cardsFilms form {
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center  ;
+    align-items: center;
     justify-content: start;
     gap: 22px;
 }
 
-.cardsFilms-container .cardsFilms-content .input-content-cardsFilms form > .input-name-cardsFilm{
+.cardsFilms-container .cardsFilms-content .input-content-cardsFilms form>.input-name-cardsFilm {
 
     width: 366px;
     height: 42px;
@@ -72,16 +71,16 @@
     display: flex;
     align-items: center;
     color: #EEEEEE;
-    
 
-    
+
+
 }
 
-.cardsFilms-container .cardsFilms-content .input-content-cardsFilms form > .input-name-cardsFilm:focus{
+.cardsFilms-container .cardsFilms-content .input-content-cardsFilms form>.input-name-cardsFilm:focus {
     outline: none;
 }
 
-.cardsFilms-container .cardsFilms-content .input-content-cardsFilms form > .input-name-cardsFilm::placeholder{
+.cardsFilms-container .cardsFilms-content .input-content-cardsFilms form>.input-name-cardsFilm::placeholder {
 
     font-family: 'Space Grotesk';
     font-style: normal;
@@ -94,7 +93,7 @@
     opacity: 0.5;
 }
 
-.cardsFilms-container .cardsFilms-content .input-content-cardsFilms form > .select-category-cardsFilm{
+.cardsFilms-container .cardsFilms-content .input-content-cardsFilms form>.select-category-cardsFilm {
     display: flex;
     justify-content: start;
     width: 364px;
@@ -115,6 +114,6 @@
     cursor: pointer;
 }
 
-.cardsFilms-container .cardsFilms-content .input-content-cardsFilms form > .select-category-cardsFilm:focus{
+.cardsFilms-container .cardsFilms-content .input-content-cardsFilms form>.select-category-cardsFilm:focus {
     outline: none;
 }
