--- a/src/components/newFilms/index.css
+++ b/src/components/newFilms/index.css
@@ -1,7 +1,7 @@
 .containerFilms {
   margin: auto;
-  width: 1222px;
-  height: 851px;
+  width: 500px;
+  height: 800px;
 
   position: relative;
 
@@ -16,4 +16,6 @@
   border-style: solid;
   border-color: rgba(238, 238, 238, 0.05);
   border-radius: 32px 32px 0px 0px;
+  margin-bottom: 3rem;
 }
+
