--- a/src/components/trending/index.css
+++ b/src/components/trending/index.css
@@ -15,3 +15,23 @@
   gap: 10px;
 }
 
+.miniFilmsCardTrending {
+  margin-top: 2.5rem;
+  positon: relative;
+  background: #292929;
+  border: 1px solid rgba(238, 238, 238, 0.05);
+
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  color: white;
+
+  padding: 0rem 0rem 3.5rem;
+}
+
+.miniFilmsCardTrending img {
+  transition: all 0.3s ease;
+}
+
+.miniFilmsCardTrending img:hover {
+  transform: scale(1.1);
+}
