--- a/src/components/enjoyForFree/index.css
+++ b/src/components/enjoyForFree/index.css
@@ -1,13 +1,16 @@
+.enjoyForContainer {
+  margin-top: 5rem;
+}
+
 .enjoyForfreeSection .labelSection {
   display: flex;
   justify-content: start;
   align-items: center;
-  gap:10px
+  gap: 10px;
 }
 .enjoyForfreeSection {
   width: 100%;
 }
-
 
 .enjoyForfreeSection .enjoyForfreeVideosGrid {
   display: grid;
@@ -16,26 +19,23 @@
   gap: 10px;
 }
 
+.miniFilmsCardEnjoyForFree {
+  margin-top: 2.5rem;
+  positon: relative;
+  background: #292929;
+  border: 1px solid rgba(238, 238, 238, 0.05);
 
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  color: white;
 
+  padding: 2rem 0rem 3.5rem;
+}
 
-  .miniFilmsCardEnjoyForFree {
-    margin-top: 2.5rem;
-    positon: relative;
-    background: #292929;
-    border: 1px solid rgba(238, 238, 238, 0.05);
-  
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 12px;
-    color: white;
+.miniFilmsCardEnjoyForFree img {
+  transition: all 0.3s ease;
+}
 
-    padding: 2rem 0rem 3.5rem;
-  }
-
-  .miniFilmsCardEnjoyForFree img {
-    transition: all 0.3s ease;
-  }
-
-  .miniFilmsCardEnjoyForFree img:hover {
-    transform: scale(1.1);
-  }
+.miniFilmsCardEnjoyForFree img:hover {
+  transform: scale(1.1);
+}
