--- a/src/components/secondaryGrandientButton/index.css
+++ b/src/components/secondaryGrandientButton/index.css
@@ -27,7 +27,8 @@ button.secondaryGrandientButton {
   );
   border: 1px solid rgba(238, 238, 238, 0.05);
 
-  filter: drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.25)) drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1));
+  filter: drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.25))
+    drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1));
   border-radius: 12px;
 }
 
