--- a/src/components/trending/index.css
+++ b/src/components/trending/index.css
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  gap:10px
+  gap: 10px;
+  margin-top: 10rem;
 }
 .trendingSection {
   width: 100%;
