--- a/src/pages/createFilms/index.css
+++ b/src/pages/createFilms/index.css
@@ -8,6 +8,7 @@
     border: 1px solid rgba(255, 255, 255, 0.05);
     border-radius: 20px;
     margin: auto;
+    color: #fff;
 
 }
 
@@ -49,6 +50,15 @@ p {
     justify-content: space-between;
 
 }
+
+.color input {
+    color: rgba(255, 255, 255, 0.5) !important;
+}
+
+.color selected {
+    color: rgba(255, 255, 255, 0.5) !important;
+}
+
 
 .ContainerButtonFilms button {
     margin-top: 40px;
