--- a/src/pages/createFilms/index.css
+++ b/src/pages/createFilms/index.css
@@ -59,6 +59,10 @@ p {
     color: rgba(255, 255, 255, 0.5) !important;
 }
 
+.ContainerButtonFilms{
+    display: flex;
+    justify-content: end;
+}
 
 .ContainerButtonFilms button {
     margin-top: 40px;
