style(enjoyforfree): adjusted card styles

--- a/src/components/enjoyForFree/index.css
+++ b/src/components/enjoyForFree/index.css
@@ -1,3 +1,7 @@
+a {
+  text-decoration: none;
+}
+
 .enjoyForContainer {
   margin-top: 5rem;
 }
@@ -20,22 +24,45 @@
 }
 
 .miniFilmsCardEnjoyForFree {
-  margin-top: 2.5rem;
-  positon: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+  margin-left: 2rem;
+  position: relative;
   background: #292929;
   border: 1px solid rgba(238, 238, 238, 0.05);
-
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 12px;
+  border-radius: 30px;
   color: white;
-
-  padding: 2rem 0rem 3.5rem;
+  padding: 2rem 0rem 0.5rem;
+  transition: all 0.2s ease;
+  background: #292929;
+  box-shadow: 0px 4px 6px rgba(255, 255, 255, 0.1);
 }
 
-.miniFilmsCardEnjoyForFree img {
-  transition: all 0.3s ease;
+.miniFilmsCardEnjoyForFree:hover {
+  background: #444444;
+  box-shadow: 0px 12px 24px rgba(255, 255, 255, 0.2), 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
 
-.miniFilmsCardEnjoyForFree img:hover {
-  transform: scale(1.1);
+.cardFilmsContainer {
+    padding: 0.5rem;
+    justify-content: center;
+}
+  
+.cardFilmsTitle {
+    font-size: 20px;
+    color: white;
+    transition: all 0.3s ease;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 30px;
+    padding: 0.25rem 0.5rem;
+    width: fit-content;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+  
+.miniFilmsCardEnjoyForFree:hover .cardFilmsTitle {
+    color: yellow;
 }
