--- a/src/pages/cardsFilms/index.css
+++ b/src/pages/cardsFilms/index.css
@@ -24,11 +24,19 @@
     display: flex;
     flex-direction: column;
     justify-content: end;
-    padding: 10px;
-    border-radius: 12px;
+    padding: 3px 10px;
+    border-radius: 18px;
     width: 367px;
     background-color: #292929;
+    border: 2px solid rgba(238, 238, 238, 0.05);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    color: white;
+    transition: all 0.2s ease;
+}
 
+.cardsFilms-container .cardsFilms-content .grid-cardsFilms a>div:hover {
+    background: #444444;
+    box-shadow: 0px 12px 24px rgba(255, 255, 255, 0.2), 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
 
 .cardsFilms-container .cardsFilms-content .input-content-cardsFilms {
