--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Chivo:wght@200;300;400&family=Space+Grotesk:wght@300;400;500&display=swap');
 
+html::-webkit-scrollbar {
+  width: 10px; 
+}
+
+html::-webkit-scrollbar-track {
+  background: #212121;
+}
+
+html::-webkit-scrollbar-thumb {
+  background: #757575;
+  border-radius: 5px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background: #616161;
+}
+
 body {
   margin: 0;
   font-family: "Roboto",sans-serif !important;
@@ -7,5 +24,5 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: #212121 !important;
   color: #fff;
+  overflow-y: scroll;
 }
-
