--- a/src/components/primaryGrandientButton/index.css
+++ b/src/components/primaryGrandientButton/index.css
@@ -3,7 +3,7 @@
 button.primaryGrandientButton {
   cursor:pointer;
   background: linear-gradient(272.56deg, #8ec5fc -13.13%, #e0c3fc 42.75%, #fae69f 82.67%);
-  
+  transition: all 0.2s ease;
   border: transparent;
 
   box-shadow: 0px 100px 80px rgba(145, 156, 174, 0.07),
@@ -33,4 +33,10 @@ button.primaryGrandientButton {
   color: #212121;
 
   min-width: 180px;
+}
+
+button.primaryGrandientButton:hover {
+  background: linear-gradient(272.56deg, #fae69f -13.13%, #e0c3fc 42.75%, #8ec5fc 82.67%);
+  transform: scale(1.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
