--- a/src/components/carouselNote/index.css
+++ b/src/components/carouselNote/index.css
@@ -4,3 +4,8 @@
     border: 1px solid rgba(238, 238, 238, 0.05);
     border-radius: 20px;
 }
+
+.cardHeader {
+    display: flex;
+    justify-content: space-between;
+}
