--- a/src/components/contentLoading/index.css
+++ b/src/components/contentLoading/index.css
@@ -1,4 +1,4 @@
-.search-loading-container {
+.content-loading-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,7 +8,7 @@
   left: 50%;
 }
 
-.search-loading-spinner {
+.content-loading-spinner {
   width: 40px; 
   height: 40px; 
   border: 4px solid #c2c4fd; 
@@ -17,7 +17,7 @@
   animation: spin 1s linear infinite;
 }
 
-.search-loading-container h1 {
+.content-loading-container h1 {
   margin-left: 1rem;
   font-size: 1.5rem;
   font-weight: 700;
