--- a/src/components/Profile/index.css
+++ b/src/components/Profile/index.css
@@ -49,7 +49,7 @@
 }
 
 .modifyPerson .firstSection .buttonsSection {
-    margin-top: 32px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: end;
@@ -57,8 +57,6 @@
     width: 700px;
 }
 
-.modifyPerson .secondSection .buttonsSection .primaryGrandientButton {
-    height: 50px !important;
-    border-radius: 20px;
-
+.modifyPerson .secondSection .buttonsSection {
+    margin-top: 45px;
 }
