--- a/src/components/createAccountModalContent/index.css
+++ b/src/components/createAccountModalContent/index.css
@@ -8,7 +8,10 @@
 }
 .createAccountModalContent .firstSection {
   height: 100%;
-  padding: 72px;
+  width: 500px;
+  padding-top: 72px;
+  padding-bottom: 72px;
+  padding-left: 60px;
   display: flex;
   flex-direction: column;
 }
@@ -24,20 +27,6 @@
   line-height: 38px;
 }
 
-.createAccountModalContent .firstSection .inputLabel,
-.createAccountModalContent .secondSection .inputLabel {
-  font-style: normal;
-  font-weight: 800;
-  font-size: 16px;
-  line-height: 20px;
-  color: #eeeeee;
-}
-.createAccountModalContent .firstSection .inputContainer,
-.createAccountModalContent .secondSection .inputContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
 .createAccountModalContent .firstSection .buttonsSection,
 .createAccountModalContent .secondSection .buttonsSection {
   margin-top: 32px;
