--- a/src/components/loginModalContent/index.css
+++ b/src/components/loginModalContent/index.css
@@ -30,7 +30,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
- 
+  flex-direction: column;
 }
 
 .loginModalContent .secondSection .inputLabel {
@@ -45,16 +45,18 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  width: 75%;
 }
 
 .loginModalContent .secondSection .buttonsSection {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin-top: 5.5rem;
+  width: 75%;
 }
 
-.loginModalContent .secondSection .buttonsSection .primaryGrandientButton,
-.secondSection .buttonsSection .secondaryGrandientButton {
-  height: 50px !important;
-  border-radius: 20px;
+.loginModalContent .secondSection .buttonsSection > button {
+  border-radius: 1.25rem;
+  height: 3.125rem;
 }
